# ODDL

./: .gitignore  CMakeLists.txt  README.md  Taskfile.dist.yaml
include/DDL/: DDL.h
include/ODDL/: ODDL.h
src/: CMakeLists.txt  DDL.c  ODDL.c
tests/: CMakeLists.txt
tests/resources/: Structs.ddl
tests/src/: CMakeLists.txt  main.cpp  simple.test.cpp  structures.test.cpp
